made it use a param

--- a/src/pages/user-settings.ejs
+++ b/src/pages/user-settings.ejs
@@ -46,7 +46,7 @@
             </p>
         <% }) %>
         <% if (user.admin) { %>
-        <a href="#">Admin view</a>
+        <a href="?admin">Admin view</a>
         <% } %>
     </main>
 </body>
