much more user page!

--- a/src/pages/users.ejs
+++ b/src/pages/users.ejs
@@ -14,16 +14,18 @@
         </header>
         <section>
             <ul class="user-list" style="margin-top:1rem;">
-                <li class="user-card">
-                    <span class="username" style="font-size: 35px;">
-                        <a href="/user/3/settings">austin</a>
-                        <span class="user-id" style="font-size: 18px; color: var(--accent-transparency);">(ID: 3)</span>
-                    </span>
-                    <br>
-                    <span class="admin-link">
-                        <a href="/user/3/settings?admin" style="color: rgb(150, 56, 33);">Admin view</a>
-                    </span>
-                </li>
+                <% users.forEach(_user => { %>
+                    <li class="user-card">
+                        <span class="username" style="font-size: 35px;">
+                            <a href="/user/<%= _user.id %>/settings"><%= _user.username %></a>
+                            <span class="user-id" style="font-size: 18px; color: var(--accent-transparency);">(ID: 3)</span>
+                        </span>
+                        <br>
+                        <span class="admin-link">
+                            <a href="/user/<%= _user.id %>/settings?admin" style="color: rgb(150, 56, 33);">Admin view</a>
+                        </span>
+                    </li>
+                <% }) %>
             </ul>
         </section>
     </main>
