--- a/src/pages/projects.ejs
+++ b/src/pages/projects.ejs
@@ -19,7 +19,7 @@
         </header>
         <section>
             <h2 style="margin-top:2.25rem;">Project List</h2>
-            <ul class="project-list">
+            <ul class="list">
                 <% projects.forEach(element => { %>
                     <li class="project-card" data-project-id="<%= element.id %>">
                         <a class="title" href="<%= element.link %>"><%= element.name %></a>
