--- a/src/pages/users.ejs
+++ b/src/pages/users.ejs
@@ -13,9 +13,9 @@
             <h1>Users</h1>
         </header>
         <section>
-            <ul class="user-list" style="margin-top:1rem;">
+            <ul class="list" style="margin-top:1rem;">
                 <% users.forEach(_user => { %>
-                    <li class="user-card">
+                    <li class="card">
                         <span class="username" style="font-size: 35px;">
                             <a href="/user/<%= _user.id %>/settings"><%= _user.username %></a>
                             <span class="user-id" style="font-size: 18px; color: var(--accent-transparency);">(ID: 3)</span>
