added a username and headers and such the userpage

--- a/src/pages/user-settings.ejs
+++ b/src/pages/user-settings.ejs
@@ -36,9 +36,6 @@
 <body>
     <%- include('partials/nav', { user: user }) %>
     <main class="container">
-        <% if (user.admin && "admin" in query) { %>
-            <%- include('partials/admin', { user: user }) %>
-        <% } %>
         <% if (user.admin) { %>
             <% if ("admin" in query) { %>
                 <a href="?">Regular view</a>
@@ -46,7 +43,15 @@
                 <a href="?admin">Admin view</a>
             <% } %>
         <% } %>
-        <h1>logged in tokens</h1>
+        <header>
+            <h1><%= _user.username %></h1>
+            <p style="margin-top:.25rem;" class="muted">A super cool user account, lol, uh, mhm</p>
+        </header>
+        <% if (user.admin && "admin" in query) { %>
+            <h2>User actions</h2>
+            <%- include('partials/admin', { user: user }) %>
+        <% } %>
+        <h2>logged in tokens</h2>
         <% tokens.forEach(token => { %>
             <p class="token">
                 <% if (token.token === user.token) { %>
