--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,6 +14,7 @@
     --shadow: 0 2px 4px rgba(0,0,0,.4),0 6px 18px -8px rgba(0,0,0,.6);
     color-scheme: dark;
     --accent-transparency: rgba(212,56,56, .5);
+    --gold: #1b1b17;
 }
 
 * { box-sizing: border-box; }
