--- a/src/pages/register.ejs
+++ b/src/pages/register.ejs
@@ -29,7 +29,7 @@
             flex-direction: column;
             align-items: center;
         }
-        form input[type="text"], form input[type="password"]{
+        form input[type="text"], form input[type="password"], form input[type="email"]{
             background: none;
             border: none;
             border-bottom: 1px rgb(139, 139, 139) solid;
@@ -65,6 +65,14 @@
             <div class="field">
                 <label for="t_username">Username</label>
                 <input type="text" name="username" id="t_username" autocomplete="username">
+            </div>
+            <div class="field">
+                <label for="t_d_username">Display Name</label>
+                <input type="text" name="display_name" id="t_d_username" autocomplete="display_name">
+            </div>
+            <div class="field">
+                <label for="t_email">Email</label>
+                <input type="email" name="email" id="t_email" autocomplete="email">
             </div>
             <div class="field">
                 <label for="t_password">Password</label>
