fix: clean up whitespace in auth.js and register.ejs

--- a/src/pages/register.ejs
+++ b/src/pages/register.ejs
@@ -71,10 +71,10 @@
                 <input type="text" name="display_name" id="t_d_username" autocomplete="display_name">
             </div>
             <div class="field">
-                <label for="t_email">Email</label>
+                <label for="t_email">Email</label><!---->
                 <input type="email" name="email" id="t_email" autocomplete="email">
             </div>
-            <div class="field">
+            <div class="field"> 
                 <label for="t_password">Password</label>
                 <div class="pw-wrapper">
                     <input type="password" name="password" id="t_password" autocomplete="new-password">
